@@ -1,3 +1,7 @@
+2008-01-18 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/Editors/_EditChildRef.py: remove debug print statements
+	* src/glade/gramps.glade: wrong visible setting in child ref widget
+
 2008-01-17  Brian Matherly <brian@gramps-project.org>
 	* src/ReportBase/_GraphvizReportDialog.py:
 	* src/ReportBase/_ReportOptions.py:
